--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -542,8 +542,10 @@
     <Compile Include="Etl\TradingDesk\LoadersDA\AmazonDailySummaryLoader.cs" />
     <Compile Include="Etl\TradingDesk\LoadersDA\AmazonCampaignSummaryLoader.cs" />
     <Compile Include="Etl\TradingDesk\LoadersDA\AmazonKeywordSummaryLoader.cs" />
+    <Compile Include="Etl\TradingDesk\LoadersDA\AmazonSearchTermSummaryLoader.cs" />
     <Compile Include="Etl\TradingDesk\LoadersDA\DbmConvLoader.cs" />
     <Compile Include="Etl\TradingDesk\LoadersDA\KeywordSummaryLoader.cs" />
+    <Compile Include="Etl\TradingDesk\LoadersDA\SearchTermSummaryLoader.cs" />
     <Compile Include="Etl\TradingDesk\LoadersDA\SummaryMetricLoader.cs" />
     <Compile Include="Etl\TradingDesk\LoadersDA\TDadPreviewLoader.cs" />
     <Compile Include="Etl\TradingDesk\LoadersDA\DBMCreativeDailySummaryLoader.cs" />
