Fix and refactor Amazon utility.

--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -559,6 +559,10 @@
     <Compile Include="MigrationsTD\201811010956242_Mig_SearchTermAccountId.Designer.cs">
       <DependentUpon>201811010956242_Mig_SearchTermAccountId.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsTD\201811040835293_Mig_SummaryMetricsForeignKey.cs" />
+    <Compile Include="MigrationsTD\201811040835293_Mig_SummaryMetricsForeignKey.Designer.cs">
+      <DependentUpon>201811040835293_Mig_SummaryMetricsForeignKey.cs</DependentUpon>
+    </Compile>
     <Compile Include="MigrationsTD\Configuration.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.Designer.cs">
@@ -918,6 +922,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\201811010956242_Mig_SearchTermAccountId.resx">
       <DependentUpon>201811010956242_Mig_SearchTermAccountId.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\201811040835293_Mig_SummaryMetricsForeignKey.resx">
+      <DependentUpon>201811040835293_Mig_SummaryMetricsForeignKey.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
