--- a/3/API/Amazon/Amazon.csproj
+++ b/3/API/Amazon/Amazon.csproj
@@ -67,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AmazonAuth.cs" />
+    <Compile Include="AmazonApiHelper.cs" />
     <Compile Include="AmazonUtility.cs" />
     <Compile Include="Entities\AmazonAdSet.cs" />
     <Compile Include="Entities\AmazonAdSetSummary.cs" />
@@ -77,6 +78,11 @@
     <Compile Include="Entities\AmazonKeywordMetric.cs" />
     <Compile Include="Entities\AmazonProductAds.cs" />
     <Compile Include="Entities\AmazonAd.cs" />
+    <Compile Include="Enums\CampaignType.cs" />
+    <Compile Include="Enums\EntitesType.cs" />
+    <Compile Include="Enums\AttributedMetricDaysInterval.cs" />
+    <Compile Include="Enums\ProductAdIdType.cs" />
+    <Compile Include="Enums\AttributedMetricType.cs" />
     <Compile Include="HelperClasses.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
