Update a ProgAdmin area to view raw stats with the changed structure.

--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -263,6 +263,7 @@
       <DependentUpon>WikiModel.edmx</DependentUpon>
     </Compile>
     <Compile Include="Helpers\MainHelper.cs" />
+    <Compile Include="Helpers\MetricHelper.cs" />
     <Compile Include="MigrationsAB\201612201825281_InitialCreate.cs" />
     <Compile Include="MigrationsAB\201612201825281_InitialCreate.Designer.cs">
       <DependentUpon>201612201825281_InitialCreate.cs</DependentUpon>
