--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -180,7 +180,14 @@
     <add key="YAMMap_PostClickRev" value="" />
     <add key="YAMMap_PostViewRev" value="ROAS Action Value" />
     <add key="YAMMap_StrategyName" value="Line" />
+    <add key="YAMMap_StrategyEid" value="Line ID" />
     <add key="YAMMap_CreativeName" value="Ad" />
+    <add key="YAMMap_CreativeEid" value="Ad ID" />
+    <add key="YAMMap_AdSetName" value="Order" />
+    <add key="YAMMap_AdSetEid" value="Order ID" />
+    <add key="YAMMap_KeywordName" value="Creative Name" />
+    <add key="YAMMap_KeywordEid" value="Creative ID" />
+    <add key="YAMMap_SearchTermName" value="Pixel" />
     <add key="YAMids_UsePixelParm" value="19685,27476,21328" /><!-- CovHouse,LornaJane,G&T -->
 
     <add key="AdformAuthBaseUrl" value="https://id.adform.com/sts/connect/token" />
