--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
@@ -31,6 +31,12 @@
             <setting name="WaitPageTimeoutInMinuts" serializeAs="String">
                 <value>30</value>
             </setting>
+            <setting name="StartExtractionDateTime" serializeAs="String">
+                <value>2018-11-23</value>
+            </setting>
+            <setting name="ExtractionIntervalsInDays" serializeAs="String">
+                <value>1</value>
+            </setting>
         </CakeExtractor.SeleniumApplication.Properties.Settings>
     </userSettings>
 </configuration>
