The application performs the following steps: 1. Goes to the page "https://advertising.amazon.com/sign-in/". 2. Logs into the account using email and password, which are stored in the config file. 3. Goes to the page "https://advertising.amazon.com/cm/campaigns". 4. Finds the profile that is stored in config file, goes into the profile. 5. Applies a filter by the type "PDA". 6. Navigates through all campaigns pages, finds all available links in the campaigns settings. 7. Navigates through each campaign settings link. 8. On the campaign settings page, reads the settings and downloads the report.

--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
@@ -26,7 +26,7 @@
                 <value>WebDriverDownloads</value>
             </setting>
             <setting name="FilesNameTemplate" serializeAs="String">
-                <value>CAMPAIGN_*.csv</value>
+                <value>*.csv</value>
             </setting>
             <setting name="WaitPageTimeoutInMinuts" serializeAs="String">
                 <value>30</value>
@@ -36,6 +36,9 @@
             </setting>
             <setting name="ExtractionIntervalsInDays" serializeAs="String">
                 <value>1</value>
+            </setting>
+            <setting name="ProfileText" serializeAs="String">
+                <value>Belkin</value>
             </setting>
         </CakeExtractor.SeleniumApplication.Properties.Settings>
     </userSettings>
