--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication.csproj
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication.csproj
@@ -38,6 +38,12 @@
     <Reference Include="ManyConsole, Version=1.0.0.4, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\ManyConsole.1.0.0.4\lib\ManyConsole.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Practices.EnterpriseLibrary.Common, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\DirectAgents.Web\packages\EnterpriseLibrary.Common.6.0.1304.0\lib\NET45\Microsoft.Practices.EnterpriseLibrary.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\DirectAgents.Web\packages\EnterpriseLibrary.Logging.6.0.1304.0\lib\NET45\Microsoft.Practices.EnterpriseLibrary.Logging.dll</HintPath>
+    </Reference>
     <Reference Include="Mono.Options, Version=5.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\Mono.Options.5.3.0\lib\net4-client\Mono.Options.dll</HintPath>
     </Reference>
@@ -45,6 +51,7 @@
       <HintPath>packages\Quartz.3.0.7\lib\net452\Quartz.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -65,8 +72,9 @@
   <ItemGroup>
     <Compile Include="Commands\SyncAmazonPdaCommand.cs" />
     <Compile Include="Drivers\ChromeWebDriver.cs" />
+    <Compile Include="SeleniumExtractors\AmazonPDAExtractor.cs" />
     <Compile Include="Jobs\ExtractAmazonPda\ExtractAmazonPdaJob.cs" />
-    <Compile Include="Models\Campaign.cs" />
+    <Compile Include="Models\CampaignInfo.cs" />
     <Compile Include="PageActions\BasePageActions.cs" />
     <Compile Include="Helpers\FileManager.cs" />
     <Compile Include="PageActions\AmazonPda\AmazonPdaPageActions.cs" />
@@ -102,6 +110,7 @@
       <Name>CakeExtracter</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\Selenium.Chrome.WebDriver.2.43\build\Selenium.Chrome.WebDriver.targets" Condition="Exists('packages\Selenium.Chrome.WebDriver.2.43\build\Selenium.Chrome.WebDriver.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
