--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/packages.config
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net461" />
+  <package id="EnterpriseLibrary.Logging" version="6.0.1304.0" targetFramework="net461" />
   <package id="ManyConsole" version="1.0.0.4" targetFramework="net461" />
   <package id="Mono.Options" version="5.3.0" targetFramework="net461" />
   <package id="Quartz" version="3.0.7" targetFramework="net461" />
