--- a/3/CakeExtracter/CakeExtracter/packages.config
+++ b/3/CakeExtracter/CakeExtracter/packages.config
@@ -26,6 +26,7 @@
   <package id="Mono.Options" version="5.3.0" targetFramework="net452" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
+  <package id="Polly" version="6.1.2" targetFramework="net461" />
   <package id="Quartz" version="2.1.2" targetFramework="net45" />
   <package id="RestSharp" version="106.3.1" targetFramework="net452" />
   <package id="System.Collections" version="4.3.0" targetFramework="net452" />
