--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
@@ -1,48 +1,86 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-      <section name="loggingConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.LoggingSettings, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" requirePermission="true" />
-      <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="CakeExtractor.SeleniumApplication.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
-    <userSettings>
-        <CakeExtractor.SeleniumApplication.Properties.Settings>
-            <setting name="SignInPageUrl" serializeAs="String">
-                <value>https://advertising.amazon.com/sign-in/</value>
-            </setting>
-            <setting name="CampaignsPageUrl" serializeAs="String">
-                <value>https://advertising.amazon.com/cm/campaigns</value>
-            </setting>
-            <setting name="EMail" serializeAs="String">
-                <value>email</value>
-            </setting>
-            <setting name="EMailPassword" serializeAs="String">
-                <value>password</value>
-            </setting>
-            <setting name="DownloadsDirectoryName" serializeAs="String">
-                <value>WebDriverDownloads</value>
-            </setting>
-            <setting name="FilesNameTemplate" serializeAs="String">
-                <value>*.csv</value>
-            </setting>
-            <setting name="WaitPageTimeoutInMinuts" serializeAs="String">
-                <value>30</value>
-            </setting>
-            <setting name="StartExtractionDateTime" serializeAs="String">
-                <value>2018-11-23</value>
-            </setting>
-            <setting name="ExtractionIntervalsInDays" serializeAs="String">
-                <value>1</value>
-            </setting>
-            <setting name="ProfileText" serializeAs="String">
-                <value>Belkin</value>
-            </setting>
-        </CakeExtractor.SeleniumApplication.Properties.Settings>
-    </userSettings>
+  <configSections>
+    <section name="loggingConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.LoggingSettings, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" requirePermission="true" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="CakeExtractor.SeleniumApplication.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
+  <loggingConfiguration name="" tracingEnabled="true" defaultCategory="General">
+    <listeners>
+      <add name="Event Log Listener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FormattedEventLogTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FormattedEventLogTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" source="Enterprise Library Logging" formatter="Text Formatter" log="" machineName="." traceOutputOptions="None" />
+      <add name="Rolling Flat File Listener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.RollingFlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" formatter="Text Formatter" rollInterval="Day" rollSizeKB="20000" maxArchivedFiles="10" />
+      <add listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.SystemDiagnosticsTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" formatter="Basic Text Formatter" type="System.Diagnostics.ConsoleTraceListener, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" name="Console Diagnostics Listener" />
+      <add listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.CustomTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" type="CakeExtracter.Logging.EnterpriseLibrary.ConsoleCustomTraceListener, CakeExtracter" name="Custom Console Listener" formatter="Basic Text Formatter" />
+    </listeners>
+    <formatters>
+      <add type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" template="Timestamp: {timestamp}{newline} Message: {message}{newline} Category: {category}{newline} Priority: {priority}{newline} EventId: {eventid}{newline} Severity: {severity}{newline} Title:{title}{newline} Machine: {localMachine}{newline} App Domain: {localAppDomain}{newline} ProcessId: {localProcessId}{newline} Process Name: {localProcessName}{newline} Thread Name: {threadName}{newline} Win32 ThreadId:{win32ThreadId}{newline} Extended Properties: {dictionary({key} - {value}{newline})}" name="Text Formatter" />
+      <add type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" template="[{timestamp} ({win32ThreadId})]: {message}" name="Basic Text Formatter" />
+    </formatters>
+    <categorySources>
+      <add switchValue="All" name="General">
+        <listeners>
+          <add name="Rolling Flat File Listener" />
+          <add name="Custom Console Listener" />
+        </listeners>
+      </add>
+    </categorySources>
+    <specialSources>
+      <allEvents switchValue="All" name="All Events" />
+      <notProcessed switchValue="All" name="Unprocessed Category" />
+      <errors switchValue="All" name="Logging Errors &amp; Warnings">
+        <listeners>
+          <add name="Event Log Listener" />
+        </listeners>
+      </errors>
+    </specialSources>
+  </loggingConfiguration>
+  <connectionStrings>
+    <add name="ClientPortalProgContext" connectionString="data source=EVTUSHENKOT;initial catalog=DA_Backup_04_10_18;user id=sa;password=qsE123awD; MultipleActiveResultSets=True;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
+  <userSettings>
+    <CakeExtractor.SeleniumApplication.Properties.Settings>
+      <setting name="SignInPageUrl" serializeAs="String">
+        <value>https://advertising.amazon.com/sign-in</value>
+      </setting>
+      <setting name="CampaignsPageUrl" serializeAs="String">
+        <value>https://advertising.amazon.com/cm/campaigns</value>
+      </setting>
+      <setting name="EMail" serializeAs="String">
+        <value>email</value>
+      </setting>
+      <setting name="EMailPassword" serializeAs="String">
+        <value>password</value>
+      </setting>
+      <setting name="DownloadsDirectoryName" serializeAs="String">
+        <value>WebDriverDownloads</value>
+      </setting>
+      <setting name="FilesNameTemplate" serializeAs="String">
+        <value>*.csv</value>
+      </setting>
+      <setting name="WaitPageTimeoutInMinuts" serializeAs="String">
+        <value>30</value>
+      </setting>
+      <setting name="StartExtractionDateTime" serializeAs="String">
+        <value>2018-11-23</value>
+      </setting>
+      <setting name="ExtractionIntervalsInDays" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="StartDate" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="EndDate" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="CookiesDirectory" serializeAs="String">
+        <value>Cookies</value>
+      </setting>
+    </CakeExtractor.SeleniumApplication.Properties.Settings>
+  </userSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -59,7 +97,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.1.1.3" newVersion="4.1.1.3" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.0.0" newVersion="4.2.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Google.Apis" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
@@ -80,6 +118,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Xml" publicKeyToken="b77a5c561934e089" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
