--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/packages.config
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CsvHelper" version="2.16.3.0" targetFramework="net461" />
   <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net461" />
   <package id="EnterpriseLibrary.Logging" version="6.0.1304.0" targetFramework="net461" />
   <package id="ManyConsole" version="1.0.0.4" targetFramework="net461" />
