--- a/3/API/Amazon/Amazon.csproj
+++ b/3/API/Amazon/Amazon.csproj
@@ -87,6 +87,8 @@
     <Compile Include="Entities\Summaries\AmazonKeywordDailySummary.cs" />
     <Compile Include="Entities\Summaries\AmazonSearchTermDailySummary.cs" />
     <Compile Include="Entities\Summaries\AmazonStatSummary.cs" />
+    <Compile Include="Entities\Summaries\AmazonTargetKeywordDailySummary.cs" />
+    <Compile Include="Entities\Summaries\AmazonTargetSearchTermDailySummary.cs" />
     <Compile Include="Helpers\AmazonApiHelper.cs" />
     <Compile Include="AmazonUtility.cs" />
     <Compile Include="Entities\AmazonAdSet.cs" />
