Use the Azure database context configuration instead of the standard DbConfiguration.

--- a/3/DirectAgents.Web/DirectAgents.Web/Web.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/Web.config
@@ -28,7 +28,7 @@
     <add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=tcp:daazure2.database.windows.net,1433;Initial Catalog=DirectAgentsDev;user id=daadmin;password=bObsp0ng!;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <!--<add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=tcp:daazure1.database.windows.net,1433;Initial Catalog=DirectAgents1;user id=daadmin;password=bObsp0ng;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
-  <entityFramework>
+  <entityFramework codeConfigurationType="DirectAgents.Domain.Contexts.Configurations.AzureConfiguration, DirectAgents.Domain">
     <contexts>
       <!--<context type="DirectAgents.Domain.Contexts.DAContext, DirectAgents.Domain" disableDatabaseInitialization="true"/>-->
     </contexts>
